<resources>
    <string name="app_name">Tarefas Academicas</string>
    <string name="tarefas">Tarefas</string>
    <string name="nova">Nova</string>
    <string name="cursos">Cursos</string>
    <string name="agenda">Agenda</string>
    <string name="configuracoes">configurações</string>
    <string name="config">Config.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="curso">Curso</string>
    <string name="professor">Professor</string>
    <string name="cadastro_de_curso">Cadastro de Curso</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="atualizar">Atualizar</string>
    <string name="cadastro_de_tarefa">Cadastro de Tarefa</string>
    <string name="tarefa">Tarefa</string>
    <string name="data">Data</string>
    <string name="selecione_um_curso">Selecione um curso</string>
    <string name="usuario">Usuario</string>
    <string name="lista_de_tarefas">Lista de Tarefas</string>
    <string name="lista_de_cursos">Lista de Cursos</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>

</resources>