<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradiente"
    tools:context=".view.CursoActivity"
    >

    <ImageButton
        android:id="@+id/btnVoltar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_voltar"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/cadastro_de_curso"
            android:background="@drawable/bg_textview_arredondado"
            android:textAlignment="center"
            android:textColor="@color/cor_menu"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtDescCurso"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_textview_arredondado"
            android:hint="@string/curso"
            android:paddingHorizontal="10dp"
            android:textColor="@color/cor_menu"
            android:textColorHint="@color/cor_menu" />

        <EditText
            android:id="@+id/txtProfCurso"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_textview_arredondado"
            android:hint="@string/professor"
            android:paddingHorizontal="10dp"
            android:textColor="@color/cor_menu"
            android:textColorHint="@color/cor_menu" />

        <Button
            android:id="@+id/btnSalvarCurso"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/cor_menu"
            android:text="@string/salvar"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/cor_menu"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>